# wrench

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  CREDITS  README.md  TODO.md  clang.cmake
src/: CMakeLists.txt  algorithm_util.h  app.cpp  app.h  asset2json.cpp  asset_codegen.cpp  asset_docgen.cpp  buffer.cpp  buffer.h  build.h  collada.cpp  collada.h  command.h  command_line.cpp  command_line.h  config.h  fipcli.cpp  fs_includes.h  game_db.cpp  game_db.h  gl_includes.h  gui.cpp  gui.h  hashtex.cpp  icons.cpp  imgui_impl_glfw.cpp  imgui_includes.h  inspectable.cpp  inspectable.h  inspector.cpp  inspector.h  instance.cpp  instance.h  iso_stream.cpp  iso_stream.h  json.h  level.cpp  level.h  level_file_types.h  main.cpp  (+49 more)
src/assetmgr/: CMakeLists.txt  asset.cpp  asset.h  asset_codegen.cpp  asset_dispatch.h  asset_docgen.cpp  asset_path_gen.cpp  asset_path_gen.h  asset_schema.wtf  asset_types.cpp  asset_types.h  asset_util.cpp  asset_util.h  game_info.cpp  game_info.h  material_asset.cpp  material_asset.h  packed_asset_bank.cpp  packed_asset_bank.h  zipped_asset_bank.cpp  zipped_asset_bank.h  zipped_asset_pack.cpp  zipped_asset_pack.h
src/cli/: fipcli.cpp  matchtoccli.cpp  memmap.c  pakraccli.cpp  randomisercli.cpp  scancli.cpp  texturefindercli.cpp  toccli.cpp  vifcli.cpp  wadcli.cpp
src/commands/: property_changed_command.h  translate_command.cpp  translate_command.h
src/core/: CMakeLists.txt  algorithm.h  buffer.cpp  buffer.h  build_config.cpp  build_config.h  collada.cpp  collada.h  elf.cpp  elf.h  fileio.cpp  fileio.h  fileio_win.cpp  filesystem.cpp  filesystem.h  gltf.cpp  gltf.h  instance.cpp  instance.h  json.cpp  json.h  level.cpp  level.h  material.cpp  material.h  memory_card.cpp  memory_card.h  memory_card_structs.h  memory_profiler.cpp  memory_profiler.h  mesh.cpp  mesh.h  mesh_graph.cpp  mesh_graph.h  png.cpp  png.h  release.cpp  release.h  shell.cpp  shell.h  (+22 more)
src/cppparser/: CMakeLists.txt  cpp_keywords.h  cpp_lexer.cpp  cpp_lexer.h  cpp_operators.h  cpp_parser.cpp  cpp_parser.h  cpp_type.cpp  cpp_type.h  cpp_value.cpp  cpp_value.h
src/editor/: CMakeLists.txt  app.cpp  app.h  command_line.cpp  command_line.h  editor.cpp  editor.h  game_db.h  gl_includes.h  gui.cpp  gui.h  icons.cpp  icons.h  imgui_includes.h  instanced_collision_recovery.cpp  instanced_collision_recovery.h  iso_stream.cpp  iso_stream.h  level.cpp  level.h  level_file_types.h  main.cpp  md5.cpp  mesh.cpp  mesh.h  meshes.h  model.h  renderer.cpp  renderer.h  shaders.cpp  shaders.h  stacktrace.cpp  stacktrace.h  stream.h  tools.cpp  tools.h  undo_redo.h  unwindows.h  util.cpp  util.h  (+5 more)
src/engine/: CMakeLists.txt  basic_types.h  collision.cpp  collision.h  compression.cpp  compression.h  gameplay.cpp  gameplay.h  gif.h  moby.cpp  moby.h  moby_animation.cpp  moby_animation.h  moby_high.cpp  moby_high.h  moby_low.cpp  moby_low.h  moby_mesh.h  moby_mesh_exporter.cpp  moby_mesh_importer.cpp  moby_packet.cpp  moby_packet.h  moby_skinning.cpp  moby_skinning.h  moby_vertex.cpp  moby_vertex.h  occlusion.cpp  occlusion.h  occlusion_grid.cpp  occlusion_grid.h  shrub.cpp  shrub.h  sky.cpp  sky.h  texture.cpp  texture.h  tfrag.cpp  tfrag.h  tfrag_debug.cpp  tfrag_debug.h  (+10 more)
src/formats/: armor_archive.cpp  armor_archive.h  bmp.cpp  bmp.h  dma.cpp  dma.h  fip.cpp  fip.h  game_model.cpp  game_model.h  iso.cpp  iso.h  iso_filesystem.cpp  iso_filesystem.h  level_data.cpp  level_data.h  level_impl.cpp  level_impl.h  level_stream.cpp  level_stream.h  level_texture.cpp  level_texture.h  level_types.h  moby_impl.cpp  moby_impl.h  moby_stream.cpp  moby_stream.h  model_utils.h  racpak.cpp  racpak.h  shrub.cpp  shrub.h  shrub_impl.cpp  shrub_impl.h  tcol.cpp  tcol.h  texture.cpp  texture.h  texture_archive.cpp  texture_archive.h  (+17 more)
src/gui/: CMakeLists.txt  about.cpp  about.h  book.cpp  book.h  build_settings.cpp  build_settings.h  command_output.cpp  command_output.h  commands.cpp  commands.h  config.cpp  config.h  gui.cpp  gui.h  gui_state.cpp  gui_state.h  render_mesh.cpp  render_mesh.h  settings.cpp  settings.h  settings_screen.cpp  settings_screen.h  shaders.cpp  shaders.h
src/instancemgr/: CMakeLists.txt  cpp_lexer.cpp  cpp_lexer.h  gameplay.cpp  gameplay.h  gameplay_convert.cpp  gameplay_convert.h  gameplay_impl_classes.h  gameplay_impl_classes.inl  gameplay_impl_common.h  gameplay_impl_common.inl  gameplay_impl_env.h  gameplay_impl_env.inl  gameplay_impl_misc.h  gameplay_impl_misc.inl  instance.cpp  instance.h  instance_codegen.cpp  instance_docgen.cpp  instance_schema.wtf  instances.cpp  instances.h  level.cpp  level.h  level_settings.cpp  level_settings.h  pvar.cpp  pvar.h  wtf_glue.cpp  wtf_glue.h  wtf_util.h
src/iso/: CMakeLists.txt  extract_iso.cpp  extract_iso.h  iso_extractor.cpp  iso_extractor.h  iso_filesystem.cpp  iso_filesystem.h  iso_packer.cpp  iso_packer.h  iso_tools.cpp  iso_tools.h  iso_unpacker.cpp  iso_unpacker.h  legacy_stream.cpp  legacy_stream.h  main.cpp  table_of_contents.cpp  table_of_contents.h  wad_identifier.cpp  wad_identifier.h
src/launcher/: CMakeLists.txt  game_list.cpp  game_list.h  global_state.cpp  global_state.h  image_viewer.cpp  image_viewer.h  main.cpp  mod_list.cpp  mod_list.h  new_mod_screen.cpp  new_mod_screen.h  oobe.cpp  oobe.h
src/lz/: compression.cpp  compression.h  main.cpp
src/pakrac/: asset_packer.cpp  asset_packer.h  asset_unpacker.cpp  asset_unpacker.h  assets.h  gameplay.h  main.cpp  primary.cpp  primary.h  tests.cpp  tests.h  wad_file.cpp  wad_file.h
src/platform/: CMakeLists.txt  fileio.c  fileio.h  fileio_win.c  main.c  main_win.c  pipeio.c  pipeio.h  pipeio_win.c
src/saveeditor/: CMakeLists.txt  memory_card.cpp  memory_card.h  saveeditor.cpp
src/spanner/: asset_packer.cpp  asset_packer.h  assets.h  gameplay.h  global_wads.cpp  global_wads.h  main.cpp  misc_wad.cpp  misc_wad.h  mpeg_wad.h  (+8 more)
test/: CMakeLists.txt  CTestCustom.cmake  main.cpp  test_algorithm.cpp  test_assetmgr.cpp  test_compression.cpp  test_cppparser.cpp  test_elf.cpp  test_engine.cpp  test_gltf.cpp  test_instancemgr.cpp  test_tristrip.cpp
(+371 files in other folders)
